# coroutines

./: .clang-format  .gitignore  .gitmodules  README.md
abstractions/generator/: Makefile  generator.hpp
abstractions/lazy/: Makefile
abstractions/maybe/: maybe.hpp
algorithms/when-all/: CMakeLists.txt  example.cpp  example0.cpp  task.hpp  task_scheduler.hpp  test.cpp  when_all.hpp
applications/binary-search/: CMakeLists.txt  LICENSE.txt  bench.cpp  coro_infra.hpp  coroutine.hpp  driver.cpp  manual.cpp  rng.hpp  state_machine.hpp  vanilla.hpp
applications/map/: CMakeLists.txt  bench.cpp  bench_interleaved.cpp  bench_sequential.cpp  dev_null_iterator.hpp  driver.cpp  map.cpp  map.hpp  multilookup.hpp  prefetch.hpp  recycling_allocator.hpp  scheduler.hpp  stats.cpp  stress_interleaved.cpp  stress_sequential.cpp  test.cpp  throttler.hpp
applications/pipe/: driver1.cpp  driver2.cpp
applications/pipes/nix-pipe/: Makefile  readable_pipe.hpp
applications/pipes/win-pipe/: _clean.bat  driver.cpp  io_context.hpp  ioc_awaiter_base.hpp  pipe.hpp  readable_pipe.hpp  runtime_error.hpp  test.cpp  win32_error.hpp  writeable_pipe.hpp
applications/threadpool/: CMakeLists.txt  driver.cpp  queue.hpp  thread_pool.hpp
applications/timers/nix-timerfd/: CMakeLists.txt  Makefile  awaitable.cpp  awaitable_timer.hpp  eager_resumable.hpp  future.hpp  unique_fd.hpp  vanilla.cpp
applications/timers/osx-kqueue/: CMakeLists.txt  awaitable.cpp  awaitable_timer.hpp  eager_task.hpp  nix_system_error.hpp  unique_fd.hpp  vanilla.cpp
applications/timers/win-efficient/: CMakeLists.txt  driver.cpp  timer_service.cpp  timer_service.hpp
applications/timers/win-iocp/: CMakeLists.txt  driver1.cpp  driver2.cpp  driver_awaitable.cpp  driver_vanilla.cpp  queue.hpp  timer_request.hpp  timer_service.hpp  timer_service_awaitable.hpp  win32_error.hpp
applications/timers/win-pool/: CMakeLists.txt  _clean.bat  awaitable.cpp  awaitable_timer.hpp  eager_resumable.hpp  io_context.hpp  vanilla.cpp  win32_error.hpp
basics/: co_yield.cpp  nested.cpp
basics/composition/: CMakeLists.txt  example0.cpp  example1.cpp  example2.cpp  task_v0.hpp  task_v1.hpp
basics/keywords/: CMakeLists.txt  Makefile  await.cpp  co_await.cpp  co_return.cpp  return.cpp  yield.cpp
basics/nested/: Makefile  example0.cpp  example1.cpp  example2.cpp  task_v0.hpp  task_v1.hpp
binary-search/: Makefile  state_machine.hpp
cmake/: benchmark.cmake  coro_config.cmake  set_coro_options.cmake  threads.cmake  warnings.cmake
config/: coroutine.hpp
internals/: Makefile  NOTES.md  suspend_always.cpp  suspend_never.cpp  task.hpp  trace.hpp
lib/include/libcoro/: task.hpp  task_queue.hpp
libcoro/: CMakeLists.txt
libcoro/include/coro/: task.hpp
libcoro/include/libcoro/: eager_task.hpp  generator.hpp  task.hpp
libcoro/include/libcoro/nix/: nix_system_error.hpp  unique_fd.hpp
libcoro/include/libcoro/win/: system_error.hpp  unique_handle.hpp
primitives/async-latch/: CMakeLists.txt  async_latch.hpp  driver.cpp
primitives/async-lock/: CMakeLists.txt  async_lock.hpp  driver.cpp
primitives/generator/: CMakeLists.txt  driver.cpp  generator.cpp  test.cpp
primitives/lazy/: lazy.cpp  lazy.hpp
primitives/manual-reset/: manual_reset_event.hpp  task.hpp
primitives/manual-reset-event/: Makefile
primitives/mutex/: async_mutex.hpp  driver.cpp
primitives/task/: README.md  driver.cpp
stdcoro/: CMakeLists.txt
stdcoro/include/config/: coroutine.hpp
tutorials/async-latch/: Makefile  README.md
tutorials/pipe/: future.hpp  io_context.hpp  ioc_awaiter_base.hpp  pipe.hpp  runtime_error.hpp  system_error.hpp  test.cpp  writeable_pipe.hpp
tutorials/task/: Makefile
